--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,19 @@
 </head>
 
 <body>
+    <nav class="navbar-fixed hidden-xs">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <span>ANNIA J. FLORES</span>
+                </div>
+                <div class="col-md-6">
+                    <i class="fa fa-envelope-o"></i>
+                    <span>¡Escríbeme! :)</span>
+                </div>
+            </div>
+        </div>
+    </nav>
     <div class="wrapper">
         <header class="home">
             <section class="container-fluid parallax-section text-center">
@@ -44,9 +57,9 @@
                     </div>
                     <div class="home__sections hidden-xs">
                         <ul class="nav navbar-nav">
-                            <li><a class="work" href="#work">TRABAJOS</a></li>
-                            <li><a class="about" href="#about">SOBRE MÍ</a></li>
-                            <li><a class="contact" href="#contact">CONTACTO</a></li>
+                            <li><a class="work main-nav" href="#work">TRABAJOS</a></li>
+                            <li><a class="about main-nav" href="#about">SOBRE MÍ</a></li>
+                            <li><a class="contact main-nav" href="#contact">CONTACTO</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -99,18 +112,77 @@
                         <img class="img-circle img-responsive" src="img/annia_j_flores_about_me_thumbnail.jpg" alt="Annia J. Flores avatar">
                     </div>
                     <div class="col-xs-12 col-md-9">
-                        <p>¡Hola! Mi nombre es Annia, soy una front-end developer egresada de la 6° promoción del bootcamp de Laboratoria, actualmente residiendo en Lima, Perú.</p>
+                        <div class="col-md-12">
+                            <h4><strong><em>Versión corta</em></strong></h4>
+                            <p>¡Hola! Mi nombre es Annia, soy una <em>front-end developer</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú. Me interesan las <strong>causas sociales</strong>, el <strong>emprendimiento</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>diseño</strong>, <strong>UX</strong>, <strong>branding</strong>, las <strong>buenas prácticas</strong> en todo lo que hago (entre otros más) y hablo un <strong>inglés</strong> bastante fluido desde muy joven.
+                                <br>
+                                <br>Estas son algunas de las herramientas y lenguajes que he aprendido a manejar en los últimos 6 meses (enero-julio 2017):</p>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="col-xs-12 col-md-6">
+                                <h3>Skill set</h3>
+                                <ul>
+                                    <li>HTML5</li>
+                                    <li>CSS3</li>
+                                    <li>Materialize</li>
+                                    <li>Bootstrap</li>
+                                    <li>SASS</li>
+                                    <li>JavaScript (ECMAScript 6)</li>
+                                    <li>jQuery &amp; AJAX</li>
+                                    <li>npm (package manager)</li>
+                                    <li>HTTP JSON &amp; consumo de APIs</li>
+                                </ul>
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <h3>Tools</h3>
+                                <ul>
+                                    <li>Brackets</li>
+                                    <li>Git</li>
+                                    <li>GitHub</li>
+                                    <li>Gulp</li>
+                                    <li>Heroku</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-md-4">
-                        <h3>Skill set</h3>
+                    <div class="col-md-12">
+                        <h4><strong><em>Versión larga</em></strong></h4>
+                        <p>Mi primer trabajo fue a los 19 años cuando <strong>decidí</strong> hacer de mi hobby un negocio y abrí una tienda de accesorios hechos a mano en Facebook con intenciones de aprender más sobre el mundo de las ventas por internet. Fue una experiencia bastante enriquecedora y llena de aprendizaje, en la que desarrollé un fuerte interés por el <strong>emprendimiento</strong>, <strong>branding</strong> y la forma en la que mis clientes experimentaban el proceso de compras en línea y de forma presencial, (cosa que más adelante despertaría un interés aún mayor por el <strong>UX</strong>). Ese proyecto hizo que desarrollara aún más mis habilidades para la <strong>organización</strong>, <strong>planeación</strong>, mi enfoque al <strong>detalle</strong> y la <strong>fotografía</strong>.</p>
+                        <p>He aprendido muchas cosas por mi propia cuenta, una de ellas fue el <strong>inglés</strong>, el cual empecé a hablar fluidamente desde los 14 años. Mi interés por las causas sociales despertó luego de eso, ya que aprender el idioma me permitió el acceso a muchas fuentes más de información en internet. Antes de ingresar a Laboratoria empecé otro emprendimiento, esta vez con intenciones de aplicar lo aprendido en el pasado, así como tambien de enfocarme en promover causas sociales cercanas a mi, relacionadas a la <strong>contaminación ambiental</strong>, <strong>sostenibilidad</strong> y <strong>productos libres de crueldad</strong>.</p>
+                        <p>En la actualidad busco ser parte de un equipo impulsado por una cultura de diseño y metodologías ágiles en la cual pueda desarrollarme como front-end developer. Una de mis metas a largo plazo es ser parte de la creación de productos que generen oportunidades y solucionen problemas del mundo.</p>
                     </div>
-
                 </div>
+                <div class="row">
+                    <h3>Intereses</h3>
+                    <div class="col-md-12">
+                        <p>Me interesa mucho el e-learning, aprender sobre front-end frameworks y las mejores prácticas del desarrollo web; manejo de redes sociales, diseño y superación personal continua.</p>
+                        <p>Tengo también afición por la música y fotografía, una de las plataformas que uso para compartir algunos de mis intereses es Instagram.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="download">
+                <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/annia-j-flores_resume.pdf">
+                    <button class="btn home__button animate-flicker" type="submit">Descarga mi CV</button>
+                </form>
             </div>
         </section>
     </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer__social col-md-4">
+                    <a href="#"><i class="fa fa-github"></i></a>
+                    <a href="#"><i class="fa fa-pinterest"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-codepen"></i></a>
+                </div>
+                <div class="col-md-4">Volver al comienzo</div>
+                <div class="col-md-4">Annia J. Flores - 2017</div>
+            </div>
+        </div>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="bundle.js"></script>
 </body>
