--- a/src/index.html
+++ b/src/index.html
@@ -31,16 +31,9 @@
 
 <body>
     <nav class="navbar-fixed hidden-xs">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <span>ANNIA J. FLORES</span>
-                </div>
-                <div class="col-md-6">
-                    <i class="fa fa-envelope-o"></i>
-                    <span>¡Escríbeme! :)</span>
-                </div>
-            </div>
+        <div class="container-fluid">
+            <span>ANNIA J. FLORES | FRONT - END DEVELOPER</span>
+            <a href="mailto:itsandromeda@gmail.com" title="Mi correo electrónico"><i class="fa fa-envelope-o"></i> ¡Escríbeme!</a>
         </div>
     </nav>
     <div class="wrapper">
@@ -151,36 +144,46 @@
                         <h4><strong><em>Versión larga</em></strong></h4>
                         <p>Mi primer trabajo fue a los 19 años cuando <strong>decidí</strong> hacer de mi hobby un negocio y abrí una tienda de accesorios hechos a mano en Facebook con intenciones de aprender más sobre el mundo de las ventas por internet. Fue una experiencia bastante enriquecedora y llena de aprendizaje, en la que desarrollé un fuerte interés por el <strong>emprendimiento</strong>, <strong>branding</strong> y la forma en la que mis clientes experimentaban el proceso de compras en línea y de forma presencial, (cosa que más adelante despertaría un interés aún mayor por el <strong>UX</strong>). Ese proyecto hizo que desarrollara aún más mis habilidades para la <strong>organización</strong>, <strong>planeación</strong>, mi enfoque al <strong>detalle</strong> y la <strong>fotografía</strong>.</p>
                         <p>He aprendido muchas cosas por mi propia cuenta, una de ellas fue el <strong>inglés</strong>, el cual empecé a hablar fluidamente desde los 14 años. Mi interés por las causas sociales despertó luego de eso, ya que aprender el idioma me permitió el acceso a muchas fuentes más de información en internet. Antes de ingresar a Laboratoria empecé otro emprendimiento, esta vez con intenciones de aplicar lo aprendido en el pasado, así como tambien de enfocarme en promover causas sociales cercanas a mi, relacionadas a la <strong>contaminación ambiental</strong>, <strong>sostenibilidad</strong> y <strong>productos libres de crueldad</strong>.</p>
-                        <p>En la actualidad busco ser parte de un equipo impulsado por una cultura de diseño y metodologías ágiles en la cual pueda desarrollarme como front-end developer. Una de mis metas a largo plazo es ser parte de la creación de productos que generen oportunidades y solucionen problemas del mundo.</p>
+                        <p>En la actualidad busco ser parte de un equipo impulsado por una cultura de diseño y metodologías ágiles en el cual pueda desarrollarme como front-end developer. Una de mis metas a largo plazo es ser parte de la creación de productos que generen oportunidades y solucionen problemas del mundo.</p>
                     </div>
                 </div>
                 <div class="row">
                     <h3>Intereses</h3>
                     <div class="col-md-12">
-                        <p>Me interesa mucho el e-learning, aprender sobre front-end frameworks y las mejores prácticas del desarrollo web; manejo de redes sociales, diseño y superación personal continua.</p>
-                        <p>Tengo también afición por la música y fotografía, una de las plataformas que uso para compartir algunos de mis intereses es Instagram.</p>
+                        <p>Me interesa mucho el e-learning, aprender sobre front-end frameworks para agilizar mi ritmo de trabajo y mejores prácticas en el ámbito; manejo de redes sociales, diseño y superación personal continua.</p>
+                        <p>Tengo también afición por la música, fotografía y una de las plataformas que uso para compartir algunos de mis intereses es Instagram.</p>
                     </div>
                 </div>
             </div>
+            <header class="home">
+                <section class="container-fluid parallax-section text-center">
+                    <div class="home__inner">
+                        <div class="home__logo">
+                            <img class="img-responsive" src="img/annia.png" alt="Annia">
+                        </div>
+                    </div>
+                </section>
+            </header>
             <div class="download">
                 <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/annia-j-flores_resume.pdf">
-                    <button class="btn home__button animate-flicker" type="submit">Descarga mi CV</button>
+                    <i class="fa fa-long-arrow-down animate-flicker"></i>
+                    <button class="btn home__button" type="submit">Descarga mi CV</button>
+                    <i class="fa fa-long-arrow-up animate-flicker"></i>
                 </form>
             </div>
         </section>
     </div>
     <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer__social col-md-4">
-                    <a href="#"><i class="fa fa-github"></i></a>
-                    <a href="#"><i class="fa fa-pinterest"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-codepen"></i></a>
-                </div>
-                <div class="col-md-4">Volver al comienzo</div>
-                <div class="col-md-4">Annia J. Flores - 2017</div>
-            </div>
+        <div class="container-fluid">
+            <ul>
+                <li><a href="#"><i class="fa fa-github"></i></a></li>
+                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+            </ul>
+            <a href="#" class="top">Volver arriba</a>
+            <span class="hidden-xs">Annia J. Flores - 2017</span>
+        </div>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
