--- a/public/index.html
+++ b/public/index.html
@@ -109,48 +109,53 @@
                             <h4><strong><em>Versión corta</em></strong></h4>
                             <p>¡Hola! Mi nombre es Annia, soy una <em>front-end developer</em> egresada de la 6° promoción del bootcamp de <a href="http://laboratoria.la/" target="_blank">Laboratoria</a> y actualmente resido en Lima, Perú. Me interesan las <strong>causas sociales</strong>, el <strong>emprendimiento</strong>, <strong>e-commerce</strong>, <strong>e-learning</strong>, <strong>diseño</strong>, <strong>UX</strong>, <strong>branding</strong>, las <strong>buenas prácticas</strong> en todo lo que hago (entre otros más) y hablo un <strong>inglés</strong> bastante fluido desde muy joven.
                                 <br>
-                                <br>En el desplegable de la derecha podrás ver algunas de las herramientas y lenguajes que he aprendido a manejar en los últimos 6 meses (enero-julio 2017).</p>
+                                <br>En los desplegables podrás ver algunas de las herramientas y lenguajes que he aprendido a manejar en los últimos 6 meses (enero-julio 2017).</p>
                         </div>
                         <div class="about__short col-md-4">
                             <div class="col-md-12">
-                                <button data-toggle="collapse" data-target="#skill-set">
+                                <button class="btn skill-btn" data-toggle="collapse" data-target="#skill-set">
                                     <i class="fa fa-chevron-down"></i>
                                     <span>Skill set</span>
                                 </button>
-                                <ul id="skill-set" class="collapse">
-                                    <li>HTML5</li>
-                                    <li>CSS3</li>
-                                    <li>Materialize</li>
-                                    <li>Bootstrap</li>
-                                    <li>SASS</li>
-                                    <li>JavaScript (ECMAScript 6)</li>
-                                    <li>jQuery &amp; AJAX</li>
-                                    <li>npm (package manager)</li>
-                                    <li>HTTP JSON &amp; consumo de APIs</li>
-                                </ul>
+                                <div id="skill-set" class="skills-info collapse">
+                                    <ul>
+                                        <li>HTML5</li>
+                                        <li>CSS3</li>
+                                        <li>Materialize</li>
+                                        <li>Bootstrap</li>
+                                        <li>SASS</li>
+                                        <li>JavaScript (ECMAScript 6)</li>
+                                        <li>jQuery &amp; AJAX</li>
+                                        <li>npm (package manager)</li>
+                                        <li>HTTP JSON &amp; consumo de APIs</li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="col-md-12">
-                                <button data-toggle="collapse" data-target="#tools">
+                                <button class="btn tool-btn" data-toggle="collapse" data-target="#tools">
                                     <i class="fa fa-chevron-down"></i>
                                     <span>Tools</span>
                                 </button>
-                                <ul id="tools" class="collapse">
-                                    <li>Brackets</li>
-                                    <li>Git</li>
-                                    <li>GitHub</li>
-                                    <li>Gulp</li>
-                                    <li>Heroku</li>
-                                </ul>
+                                <div id="tools" class="skills-info collapse">
+                                    <ul>
+                                        <li>Brackets</li>
+                                        <li>Git</li>
+                                        <li>GitHub</li>
+                                        <li>Gulp</li>
+                                        <li>Heroku</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <hr>
                 <div class="row">
                     <div class="about__long col-md-12">
                         <h4><strong><em>Versión larga</em></strong> <a href="#interests" class="skip">(Saltar)</a></h4>
                         <p>Mi primer trabajo fue a los 19 años cuando <strong>decidí</strong> hacer de mi hobby un negocio y abrí una tienda de accesorios hechos a mano en Facebook con intenciones de aprender más sobre el mundo de las ventas por internet. Fue una experiencia bastante enriquecedora y llena de aprendizaje, en la que desarrollé un fuerte interés por el <strong>emprendimiento</strong>, <strong>branding</strong> y la forma en la que mis clientes experimentaban el proceso de compras en línea y de forma presencial, (cosa que más adelante despertaría un interés aún mayor por el <strong>UX</strong>). Ese proyecto hizo que desarrollara aún más mis habilidades para la <strong>organización</strong>, <strong>planeación</strong>, mi enfoque al <strong>detalle</strong> y la <strong>fotografía</strong>.</p>
                         <p>He aprendido muchas cosas por mi propia cuenta, una de ellas fue el <strong>inglés</strong>, el cual empecé a hablar fluidamente desde los 14 años. Mi interés por las causas sociales despertó luego de eso, ya que aprender el idioma me permitió el acceso a muchas fuentes más de información en internet. Antes de ingresar a Laboratoria empecé otro emprendimiento, esta vez con intenciones de aplicar lo aprendido en el pasado, así como tambien de enfocarme en promover causas sociales cercanas a mi, relacionadas a la <strong>contaminación ambiental</strong>, <strong>sostenibilidad</strong> y <strong>productos libres de crueldad</strong>.</p>
-                        <p>En la actualidad busco ser parte de un equipo impulsado por una cultura de diseño y metodologías ágiles en el cual pueda desarrollarme como front-end developer. Una de mis metas a largo plazo es ser parte de la creación de productos que generen oportunidades y solucionen problemas del mundo.</p>
+                        <p>En la actualidad busco ser parte de un equipo impulsado por una cultura de diseño y metodologías ágiles en el cual pueda desarrollarme como front-end developer junior y poder . Una de mis metas a largo plazo es ser parte de la creación de productos que generen oportunidades y solucionen problemas del mundo.</p>
                     </div>
                 </div>
                 <div id="interests" class="row">
