--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     <nav class="navbar-fixed hidden-xs">
         <div class="container-fluid">
             <span class="nav-text">ANNIA J. FLORES | FRONT - END DEVELOPER JR.</span>
-            <a class="nav-text" href="mailto:itsandromeda@gmail.com" title="Mi correo electrónico"><i class="fa fa-envelope-o"></i> ¡ESCRÍBEME!</a>
+            <a class="nav-text" href="mailto:itsandromeda@gmail.com" title="Mi correo electrónico"><i class="fa fa-envelope-o"></i> ¡ESCRÍBEME! :)</a>
         </div>
     </nav>
     <div class="wrapper">
@@ -95,6 +95,7 @@
                         <button class="btn">JavaScript, Bootstrap, GULP &amp; SASS</button>
                     </div>
                 </div>
+                <hr>
             </div>
         </section>
         <section id="about">
@@ -192,11 +193,12 @@
                     <h3>Intereses</h3>
                     <div class="col-md-12">
                         <p>Me interesa mucho el e-learning, aprender sobre front-end frameworks para agilizar mi ritmo de trabajo y mejores prácticas en el ámbito; manejo de redes sociales, diseño y superación personal continua.</p>
-                        <p>Tengo también afición por la música, fotografía y una de las plataformas que uso para compartir algunos de mis intereses es Instagram.</p>
+                        <p>Tengo también afición por la música, fotografía y una de las plataformas que uso para compartir algunos de mis hobbies e intereses es Instagram.</p>
                     </div>
                 </div>
             </div>
-            <header class="home">
+            <div id="root"></div>
+            <header class="home hidden-xs">
                 <section class="container-fluid parallax-section text-center">
                     <div class="home__inner">
                         <div class="home__logo">
