--- a/public/index.html
+++ b/public/index.html
@@ -188,35 +188,38 @@
                         <p>He aprendido muchas cosas por mi propia cuenta, una de ellas fue el <strong>inglés</strong>, el cual empecé a hablar fluidamente desde los 14 años. Mi interés por las causas sociales despertó luego de eso, ya que aprender el idioma me permitió el acceso a muchas fuentes más de información en internet. Antes de ingresar a Laboratoria empecé otro emprendimiento, esta vez con intenciones de aplicar lo aprendido en el pasado, así como tambien de enfocarme en promover causas sociales cercanas a mi, relacionadas a la <strong>contaminación ambiental</strong>, <strong>sostenibilidad</strong> y <strong>productos libres de crueldad</strong>.</p>
                         <p>En la actualidad busco ser parte de un equipo impulsado por una cultura de diseño y metodologías ágiles para poder adaptarme a nuevos estándares de trabajo. Una de mis metas a largo plazo es ser parte de la creación de productos que generen oportunidades y solucionen problemas del mundo y sé que tengo un largo camino por recorrer.</p>
                         <p>Mi desempeño en el bootcamp de Laboratoria fue bastante bueno, creo que con una computadora y conexión a internet no hay algo que no pueda aprender a hacer; gracias a este mindset y mi personalidad decisiva siento que absorví como una esponja los temas dictados desde 0 y obtuve varios reconocimientos a lo largo del programa.</p>
-                        <p>No obstante tengo la percepción de que un equipo cuya acción de hacer preguntas es </p>
-                        <hr>
                     </div>
                 </div>
                 <div id="interests" class="row">
                     <div class="col-md-12">
                         <h3>Intereses</h3>
-                        <p>Me interesa mucho el e-learning, aprender sobre front-end frameworks para agilizar mi ritmo de trabajo y mejores prácticas en el ámbito; manejo de redes sociales, diseño y superación personal continua son otros temas de interés personal.</p>
-                        <p>Tengo también afición por la música, fotografía y una de las plataformas que uso para compartir varios de mis hobbies e intereses es Instagram.</p>
+                        <p>Me interesa mucho el e-learning, front-end frameworks para agilizar mi ritmo de trabajo y aprender sobre las mejores prácticas en el ámbito; manejo de redes sociales, diseño y superación personal continua.</p>
+                        <p>Tengo también afición por la música, fotografía y una de las plataformas que uso para compartir algunos de mis hobbies e intereses es Instagram.</p>
+                    </div>
+                    <div class="col-md-12">
+                        <div id="root"></div>
                     </div>
                 </div>
             </div>
-            <header class="home hidden-xs">
-                <section class="container-fluid parallax-section text-center">
-                    <div class="home__inner">
-                        <div class="home__logo">
-                            <img class="img-responsive" src="img/annia.png" alt="Annia">
-                        </div>
-                    </div>
-                </section>
-            </header>
-            <div class="download">
-                <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/annia-j-flores_resume.pdf">
-                    <i class="fa fa-long-arrow-down animate-flicker"></i>
-                    <button class="btn home__button" type="submit">Descarga mi CV</button>
-                    <i class="fa fa-long-arrow-up animate-flicker"></i>
-                </form>
-            </div>
+            <div id="root"></div>
         </section>
+        <header class="header-bot hidden-xs">
+            <section class="container-fluid parallax-section text-center">
+                <div class="header-bot__inner">
+                    <div class="header-bot__logo">
+                        <img class="img-responsive" src="img/annia.png" alt="Annia">
+                    </div>
+                </div>
+            </section>
+        </header>
+        <div id="contact" class="download">
+            <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/annia-j-flores_resume.pdf">
+                <p>Escríbeme: itsandromeda@gmail.com</p>
+                <i class="fa fa-long-arrow-down animate-flicker"></i>
+                <button class="btn home__button" type="submit">Descarga mi CV</button>
+                <i class="fa fa-long-arrow-up animate-flicker"></i>
+            </form>
+        </div>
     </div>
     <footer class="footer">
         <div class="container-fluid">
