--- a/src/index.html
+++ b/src/index.html
@@ -185,9 +185,9 @@
                     <div class="about__long col-md-12">
                         <h4><strong><em>Versión larga</em></strong> <a href="#interests" class="skip">(Saltar)</a></h4>
                         <p>Mi primer trabajo fue a los 19 años cuando <strong>decidí</strong> hacer de mi hobby un negocio y abrí una tienda de accesorios hechos a mano en Facebook con intenciones de aprender más sobre el mundo de las ventas por internet. Fue una experiencia bastante enriquecedora y llena de aprendizaje, en la que desarrollé un fuerte interés por el <strong>emprendimiento</strong>, <strong>branding</strong> y la forma en la que mis clientes experimentaban el proceso de compras en línea y de forma presencial, (cosa que más adelante despertaría un interés aún mayor por el <strong>UX</strong>). Ese proyecto hizo que desarrollara aún más mis habilidades para la <strong>organización</strong>, <strong>planeación</strong>, mi enfoque al <strong>detalle</strong> y la <strong>fotografía</strong>.</p>
-                        <p>He aprendido muchas cosas por mi propia cuenta, una de ellas fue el <strong>inglés</strong>, el cual empecé a hablar fluidamente desde los 14 años. Mi interés por las causas sociales despertó luego de eso, ya que aprender el idioma me permitió el acceso a muchas fuentes más de información en internet. Antes de ingresar a Laboratoria empecé otro emprendimiento, esta vez con intenciones de aplicar lo aprendido en el pasado, así como tambien de enfocarme en promover causas sociales cercanas a mi, relacionadas a la <strong>contaminación ambiental</strong>, <strong>sostenibilidad</strong> y <strong>productos libres de crueldad</strong>.</p>
+                        <p>He aprendido muchas cosas por mi propia cuenta, una de ellas fue el <strong>inglés</strong>, el cual empecé a hablar fluidamente desde los 14 años. Mi interés por las <strong>causas sociales</strong> despertó luego de eso, ya que aprender el idioma me permitió el acceso a muchas fuentes más de información en internet. Antes de ingresar a Laboratoria empecé otro emprendimiento, esta vez con intenciones de aplicar lo aprendido en el pasado, así como tambien de enfocarme en promover causas sociales cercanas a mi, relacionadas a la <strong>contaminación ambiental</strong>, <strong>sostenibilidad</strong> y <strong>productos libres de crueldad</strong>.</p>
                         <p>En la actualidad busco ser parte de un equipo impulsado por una cultura de diseño y metodologías ágiles para poder adaptarme a nuevos estándares de trabajo. Una de mis metas a largo plazo es ser parte de la creación de productos que generen oportunidades y solucionen problemas del mundo y sé que tengo un largo camino por recorrer.</p>
-                        <p>Mi desempeño en el bootcamp de Laboratoria fue bastante bueno, creo que con una computadora y conexión a internet no hay algo que no pueda aprender a hacer; gracias a este mindset y mi personalidad decisiva siento que absorví como una esponja los temas dictados desde 0 y obtuve varios reconocimientos a lo largo del programa.</p>
+                        <p>Mi desempeño en el bootcamp de Laboratoria fue bastante bueno, creo que con una computadora y conexión a internet no hay algo que no pueda aprender a hacer; gracias a este mindset y mi personalidad decisiva siento que absorví como una esponja todos estos temas que eran algo nuevo para mí y obtuve varios reconocimientos a lo largo del programa.</p>
                     </div>
                 </div>
                 <div id="interests" class="row">
@@ -201,7 +201,6 @@
                     </div>
                 </div>
             </div>
-            <div id="root"></div>
         </section>
         <header class="header-bot hidden-xs">
             <section class="container-fluid parallax-section text-center">
