--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,6 @@
                         <button class="btn">JavaScript, Bootstrap, GULP &amp; SASS</button>
                     </div>
                 </div>
-                <hr>
             </div>
         </section>
         <section id="about">
@@ -193,11 +192,12 @@
                 <div id="interests" class="row">
                     <div class="col-md-12">
                         <h3>Intereses</h3>
-                        <p>Me interesa mucho el e-learning, front-end frameworks para agilizar mi ritmo de trabajo y aprender sobre las mejores prácticas en el ámbito; manejo de redes sociales, diseño y superación personal continua.</p>
+                        <p>Me interesa mucho el e-learning, front-end frameworks para agilizar mi ritmo de trabajo y aprender sobre las mejores prácticas en el ámbito manejo de redes sociales, diseño y superación personal continua.</p>
                         <p>Tengo también afición por la música, fotografía y una de las plataformas que uso para compartir algunos de mis hobbies e intereses es Instagram.</p>
                     </div>
-                    <div class="col-md-12">
-                        <div id="root"></div>
+                    <div class="insta-feed col-md-12">
+                        <script src="https://snapwidget.com/js/snapwidget.js"></script>
+                        <iframe src="https://snapwidget.com/embed/410595" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
                     </div>
                 </div>
             </div>
