about me español update

--- a/public/index.html
+++ b/public/index.html
@@ -192,8 +192,8 @@
                 <div id="interests" class="row">
                     <div class="col-md-12">
                         <h3>Intereses</h3>
-                        <p>Me interesa mucho el e-learning, front-end frameworks para agilizar mi ritmo de trabajo y aprender sobre las mejores prácticas en el ámbito manejo de redes sociales, diseño y superación personal continua.</p>
-                        <p>Tengo también afición por la música, fotografía y una de las plataformas que uso para compartir algunos de mis hobbies e intereses es Instagram.</p>
+                        <p>Me interesa mucho el e-learning, aprender sobre front-end frameworks para agilizar mi ritmo de trabajo y también sobre las mejores prácticas en el ámbito; el manejo efectivo de redes sociales, diseño y superación personal continua son otros temas que llaman mi atención.</p>
+                        <p>Tengo también una fuerte afición por la música, fotografía y una de las plataformas que uso para compartir varios de mis hobbies e intereses es Instagram.</p>
                     </div>
                     <div class="insta-feed col-md-12">
                         <script src="https://snapwidget.com/js/snapwidget.js"></script>
